[gd_scene load_steps=14 format=3 uid="uid://882gsf2ii4i2"]

[ext_resource type="Script" path="res://scripts/characters/grounded-enemy.gd" id="1_fel0p"]
[ext_resource type="Texture2D" uid="uid://clh8ay726g6d7" path="res://assets/enemy-grounded.png" id="2_abyun"]
[ext_resource type="PackedScene" uid="uid://cfu5ypumdcbpi" path="res://scenes/misc/health_component.tscn" id="3_l5elk"]
[ext_resource type="PackedScene" uid="uid://50r4ukcihb57" path="res://scenes/ui/battle_health_bar.tscn" id="3_m54r4"]
[ext_resource type="PackedScene" uid="uid://8lbtdmy4bdta" path="res://scenes/misc/hitbox_component.tscn" id="4_0fp8c"]

[sub_resource type="Animation" id="Animation_dj0gu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_03n0e"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_lco0w"]
resource_name = "hit"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_20kh3"]
resource_name = "move"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_38cao"]
_data = {
"RESET": SubResource("Animation_dj0gu"),
"attack": SubResource("Animation_03n0e"),
"hit": SubResource("Animation_lco0w"),
"move": SubResource("Animation_20kh3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_072ns"]
size = Vector2(8.03704, 3.54334)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmtqv"]
size = Vector2(7.52706, 4.5576)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dghjm"]
size = Vector2(13.2037, 6.49613)

[node name="Enemy" type="CharacterBody2D"]
position = Vector2(1.78814e-07, -3)
scale = Vector2(0.870967, 0.846658)
collision_layer = 4
script = ExtResource("1_fel0p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_abyun")
hframes = 4

[node name="BattleHealthBar" parent="Sprite2D" instance=ExtResource("3_m54r4")]
offset_left = -4.5926
offset_top = -7.08669
offset_right = 99.4074
offset_bottom = 19.9133

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_38cao")
}

[node name="SolidCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1.14815, 1.18111)
shape = SubResource("RectangleShape2D_072ns")

[node name="HealthComponent" parent="." instance=ExtResource("3_l5elk")]
visible = false
MAX_HEALTH = 50
health = 50

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_0fp8c")]
health_component = NodePath("../HealthComponent")

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
visible = false
position = Vector2(0, 1.18111)
scale = Vector2(0.928571, 0.868083)
shape = SubResource("RectangleShape2D_xmtqv")

[node name="HitRecovery" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Ray_V" type="RayCast2D" parent="."]
visible = false
position = Vector2(3.44445, 2.36223)
target_position = Vector2(-2.38419e-07, 9.44892)

[node name="Ray_H" type="RayCast2D" parent="."]
visible = false
position = Vector2(-0.853366, 0.746187)
target_position = Vector2(6.8889, -1.19209e-06)

[node name="DetectRange" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRange"]
position = Vector2(3.73149, 0.885835)
shape = SubResource("RectangleShape2D_dghjm")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="HitRecovery" to="." method="_on_hit_recovery_timeout"]
[connection signal="area_entered" from="DetectRange" to="." method="_on_detect_range_area_entered"]
[connection signal="area_exited" from="DetectRange" to="." method="_on_detect_range_area_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
